--- a/app/views/links.erb
+++ b/app/views/links.erb
@@ -2,9 +2,6 @@
 
 <ul>
   <% @links.each do |link| %>
-    <li>Title: <%= link.title %></li>
-    <li>URL: <%= link.url %></li>
-    <li>Tags: <%= link.tags.map(&:tag_name) %> </li>
-    
+    <li>Title: <%= link.title %> URL: <%= link.url %> Tags: <%= link.tags.map(&:tag_name)%>  </li>
   <% end %>
 </ul>
