--- a/app/views/links.erb
+++ b/app/views/links.erb
@@ -1,11 +1,11 @@
 <h1>Links</h1>
 
-<% if session[:first_session] %>
-
+<% if session[:first_session] && session[:current_user_id] %>
+  <% p session[:current_user_id]%>
   <h2><%= "Welcome #{User.current_user(session[:current_user_id]).email}, we are happy to see you!" %></h2>
 
   <% session[:first_session] = false %>
-  
+
 <% end %>
 
 <ul>
