--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -2,5 +2,6 @@
 <form action="/sign_up" method="post">
 <input type="text" name="email">
 <input type="text" name="password">
+<input type="text" name="password_confirmation">
 <input type="submit" name="submit" value="submit">
 </form>
